<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/tx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/maincomeback"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/title" 
        style="@style/HeadText"
        />
<!-- android:textAppearance="@style/HeadText" -->
    <TextView
        android:id="@+id/tx3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/title2"
        style="@style/HeadText"
        />
<!-- android:textAppearance="@style/HeadText" -->
    <LinearLayout
        android:id="@+id/tx4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx3"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/time" />

        <TextView
            android:id="@+id/showTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/nowTime" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tx5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.0"
            android:gravity="right"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/deviceType" 
            style="@style/CommonText"
            />

        <TextView
            android:id="@+id/showDeviceType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.0"
            android:gravity="left"
            android:text="@string/unknow" 
            style="@style/CommonText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tx6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx5"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/deviceId"
            style="@style/CommonText" />

        <TextView
            android:id="@+id/showDeviceId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:gravity="left"
            android:text="@string/unknow" 
            style="@style/CommonText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tx7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx6"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginRight="3dp"
            android:gravity="right"
            android:text="@string/password" 
            style="@style/CommonText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:gravity="left">
                    <EditText
            android:id="@+id/inputPassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/password_hint"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx7"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/login" />
    
        <Button
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="test" 
        android:visibility="gone"/>

</RelativeLayout>