<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/all_bg"
    tools:context="${relativePackage}.${activityClass}" >
		<LinearLayout 
	    android:id="@+id/head"
	    android:layout_marginTop="5dp"
	    android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:src="@drawable/back" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            /> 
        <Button
            android:id="@+id/exit"
            style="@style/ExitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@drawable/exit"
            android:text="@string/exit" />
	</LinearLayout>
 <!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" /> -->
    
     <LinearLayout
        android:id="@+id/tx4"
        android:layout_below="@id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/showDate"
            style="@style/HeadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/time" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/time_line" />

        <TextView
            android:id="@+id/showTime"
            style="@style/HeadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/nowTime" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="center"
        android:src="@drawable/logo" />
    
    
        <TextView
        android:id="@+id/tx2"
        style="@style/HeadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/title" />

<!--     <TextView
        android:id="@+id/tx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/deviceId" /> 
        
        android:background="@drawable/null"
        -->
        <Button
        android:id="@+id/setupAccount"
        android:background="@drawable/settingbt"                 
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        style="@style/SettingText"
        android:text="帐号设置" />
        
        <Button
        android:id="@+id/setupDetails" 
        android:background="@drawable/settingbt"        
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setupAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        style="@style/SettingText"
        android:text="设备设置" />

        <TextView
            android:id="@+id/last1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/company_name"
            style="@style/CompanyText"  
            />

</RelativeLayout>
