<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_bg"
    tools:context="${relativePackage}.${activityClass}" >

    <!--
         <ImageView
        android:id="@+id/tx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/maincomeback"
        android:visibility="gone" />
    -->

    <LinearLayout
        android:id="@+id/tx4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/showDate"
            style="@style/HeadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/time" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/time_line" />

        <TextView
            android:id="@+id/showTime"
            style="@style/HeadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/nowTime" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="center"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tx2"
        style="@style/HeadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/title" />
    <!-- android:textAppearance="@style/HeadText" -->


    <!--
         <TextView
        android:id="@+id/tx3"
        style="@style/HeadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/title2" />
    -->
    <!-- android:textAppearance="@style/HeadText" -->
    <!--
    <LinearLayout
        android:id="@+id/tx4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx3"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/time" />

        <TextView
            android:id="@+id/showTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/nowTime" />
    </LinearLayout>
    -->

    <LinearLayout
        android:id="@+id/tx5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx2"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_bg1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/UserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/inputUserName"
            style="@style/UserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            android:hint="请输入用户名" />

        <ImageView
            android:id="@+id/down_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:scaleType="center"
            android:visibility="invisible"
            android:src="@drawable/down_allow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tx6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx5"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"        
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"        
        android:background="@drawable/input_bg1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/UserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/password" />

        <EditText
            android:id="@+id/inputPassword"
            style="@style/UserText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:singleLine="true"
            android:hint="@string/password_hint" />

        
             <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:scaleType="center"
            android:layout_gravity="center"
            android:src="@drawable/down_allow" 
            android:visibility="invisible"/>
       
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx6"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:maxLines="2"
        android:textSize="12sp"
        android:textStyle="normal"
        android:textColor="#ffffff"
        android:text="@string/notice" />

    <!-- <TextView
        style="@style/CommonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx6"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/notice" /> -->

    <!--
    <LinearLayout
        android:id="@+id/tx5"
        android:layout_below="@id/tx2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/CommonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.0"
            android:gravity="right"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/deviceType" />

        <TextView
            android:id="@+id/showDeviceType"
            style="@style/CommonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.0"
            android:gravity="left"
            android:text="@string/unknow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tx6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx5"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/CommonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/deviceId" />

        <TextView
            android:id="@+id/showDeviceId"
            style="@style/CommonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:gravity="left"
            android:text="@string/unknow" />
    </LinearLayout>
    -->
    <!--
    <LinearLayout
        android:id="@+id/tx7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx6"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            style="@style/CommonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:gravity="left" >

            <EditText
                android:id="@+id/inputPassWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>
    -->

 

    <!--
         <Button
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="test"
        android:visibility="gone" />
    -->

    <CheckBox
        android:id="@+id/checkNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:singleLine="true"
        android:textSize="12sp"
        android:textStyle="italic"
        android:textColor="#ffffff"
        android:text="@string/notice2"
        android:checked="false"
        />
    
       <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkNotice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:background="@drawable/login_bg"
        android:text="@string/login" />
       
           <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:text="@string/company_name" />
           
         <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:text="@string/company_phone" />
    
<!-- android:="@drawable/check_notice" -->
</RelativeLayout>