<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
   <LinearLayout 
       android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:padding="10dp"
        android:onClick="onClick"
        android:layout_marginTop="10dp"
       >
      <!-- <ImageView        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:gravity="center"
        android:src="@drawable/maincomeback"
        /> -->
       <TextView
        android:id="@+id/tx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:drawableLeft="@drawable/maincomeback"
        android:textColor="#ff9600"
        android:text="返回" /> 
       
   </LinearLayout>
   

    <TextView
        android:id="@+id/tx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/title" 
        style="@style/HeadText"/>

    <TextView
        android:id="@+id/tx3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/title2" 
        style="@style/HeadText"/>

    <LinearLayout
        android:id="@+id/tx4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx3"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/time" />

        <TextView
            android:id="@+id/showTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/nowTime" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/tx5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:weightSum="3.0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/checkElectric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="#98D0DE"
            android:textSize="20sp"
            android:text="验 电" />

        <Button
            android:id="@+id/showResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:background="#98D0DE"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="查 看" /> 
    </LinearLayout>
    
     <TextView
        android:id="@+id/status"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx5"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:background="#85A446"
        android:textSize="20sp"
        android:text="状态:检验合格"  />


</RelativeLayout>
